overflow issue

--- a/dev/scss/_resets.scss
+++ b/dev/scss/_resets.scss
@@ -3,7 +3,7 @@
 /* Resets */
 html {
 	box-sizing: border-box;
-	// overflow-x: hidden;
+	overflow-x: hidden;
 }
 *, *:before, *:after {
     box-sizing: inherit;
